--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: STATS
 Type: Package
-Title: What the Package Does (Title Case)
+Title:statistical methods for sophisticated data analysis(STATS)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: JoaoPedrojs
+Maintainer: schettino.joaopedro@gmail.com
+Description:chi square test for independence assumptions   
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
