--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: STATS
 Type: Package
-Title:statistical methods for sophisticated data analysis(STATS)
+Title: statistical methods for sophisticated data analysis(STATS)
 Version: 0.1.0
-Author: JoaoPedrojs
-Maintainer: schettino.joaopedro@gmail.com
+Author: JoaoPedrojs [aut,cre]
+Maintainer: JoaoPedrojs <schettino.joaopedro@gmail.com>
 Description:chi square test for independence assumptions   
 Encoding: UTF-8
 LazyData: true
